collected Canada subreddit titles + json file

--- a/reddit_corpus.ipynb
+++ b/reddit_corpus.ipynb
@@ -1,19 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load libraries and create a Reddit instance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "import praw\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +53,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a reddit object and mine posts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nosleep = reddit.subreddit('NoSleep').hot(limit=1000)\n",
+    "nosleep = reddit.subreddit('NoSleep').hot(limit=100)\n",
     "nosleep_dict = {\"title\":[],\n",
     "                \"score\":[],\n",
     "                \"id\":[],\n",
@@ -78,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,27 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      All the trouble I’ve caused, the pain, the dea...\n",
-       "1      I’ve been friends with Art for a long time. We...\n",
-       "2      I’m sure y’all are familiar with the stereotyp...\n",
-       "3      My name is Amy and I'm a passenger on the Midn...\n",
-       "4      live in a small unexciting town in western New...\n",
-       "                             ...                        \n",
-       "752    It’s almost like I’m lying on an operating tab...\n",
-       "753    [Part 1](https://www.reddit.com/r/nosleep/comm...\n",
-       "754    When I peeked out of my sister's window and sa...\n",
-       "755    The first sentence of her Tinder bio read, “Pr...\n",
-       "756    Last week I went to the beach with a friend. I...\n",
-       "Name: body, Length: 757, dtype: object"
+       "0     We knew we could only ever have one. Wasn’t ev...\n",
+       "1      “We’ve been at this for days. Isn’t it shrive...\n",
+       "2     I gripped the steering wheel so tightly my knu...\n",
+       "3     My parents had both died in a car crash and I ...\n",
+       "4     We called it snuff in my day, but I figured I'...\n",
+       "                            ...                        \n",
+       "93    I don’t remember the house in Zugdidi, the civ...\n",
+       "94    I groggily drove my truck through downtown Ral...\n",
+       "95    Part 1: https://www.reddit.com/r/nosleep/comme...\n",
+       "96      \\n\\nThere is no metaphor about this, people....\n",
+       "97    A few weeks ago I started to have a toothache....\n",
+       "Name: body, Length: 98, dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,12 +132,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make a function to facilitate mining"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## test file"
+    "def subreddit_to_dict(subreddit, title_only=False):\n",
+    "    dummy_dict = {\"title\":[],\n",
+    "                \"score\":[],\n",
+    "                \"id\":[],\n",
+    "                \"url\":[],\n",
+    "                \"num_comments\": [],\n",
+    "                \"created\": [],\n",
+    "                \"body\":[], \n",
+    "                \"author\": [],\n",
+    "                \"upvote_ratio\": []}\n",
+    "    \n",
+    "    for post in subreddit:\n",
+    "        if title_only:\n",
+    "            dummy_dict['title'].append(post.title) \n",
+    "            dummy_dict['body'].append(post.selftext)\n",
+    "            dummy_dict['author'].append(post.author)\n",
+    "            dummy_dict['id'].append(post.id)\n",
+    "            dummy_dict['num_comments'].append(post.num_comments)\n",
+    "            dummy_dict['url'].append(post.url)\n",
+    "            dummy_dict['upvote_ratio'].append(post.upvote_ratio)\n",
+    "            dummy_dict['score'].append(post.score)\n",
+    "            dummy_dict['created'].append(post.created)\n",
+    "        else:\n",
+    "            if post.selftext == \"\":\n",
+    "                pass\n",
+    "            else:\n",
+    "                dummy_dict['title'].append(post.title) \n",
+    "                dummy_dict['body'].append(post.selftext)\n",
+    "                dummy_dict['author'].append(post.author)\n",
+    "                dummy_dict['id'].append(post.id)\n",
+    "                dummy_dict['num_comments'].append(post.num_comments)\n",
+    "                dummy_dict['url'].append(post.url)\n",
+    "                dummy_dict['upvote_ratio'].append(post.upvote_ratio)\n",
+    "                dummy_dict['score'].append(post.score)\n",
+    "                dummy_dict['created'].append(post.created)\n",
+    "            \n",
+    "    \n",
+    "    return dummy_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canada = reddit.subreddit('canada').hot(limit=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canada_dict = subreddit_to_dict(canada, title_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canada_df = pd.DataFrame(canada_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>score</th>\n",
+       "      <th>id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>created</th>\n",
+       "      <th>body</th>\n",
+       "      <th>author</th>\n",
+       "      <th>upvote_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>COVID-19 Health &amp; Support Megathread #9 - REMI...</td>\n",
+       "      <td>288</td>\n",
+       "      <td>nbxior</td>\n",
+       "      <td>https://www.reddit.com/r/canada/comments/nbxio...</td>\n",
+       "      <td>273</td>\n",
+       "      <td>1.620957e+09</td>\n",
+       "      <td>Canada is now faced with its third wave impact...</td>\n",
+       "      <td>medym</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021 Olympics Megathread</td>\n",
+       "      <td>166</td>\n",
+       "      <td>orbf0z</td>\n",
+       "      <td>https://www.reddit.com/r/canada/comments/orbf0...</td>\n",
+       "      <td>303</td>\n",
+       "      <td>1.627219e+09</td>\n",
+       "      <td>It's the 2021 Olympics finally! This thread is...</td>\n",
+       "      <td>Evilbred</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Moderna to sign agreement to build MRNA produc...</td>\n",
+       "      <td>716</td>\n",
+       "      <td>p1o95n</td>\n",
+       "      <td>https://www.cbc.ca/news/politics/moderna-plant...</td>\n",
+       "      <td>164</td>\n",
+       "      <td>1.628599e+09</td>\n",
+       "      <td></td>\n",
+       "      <td>morenewsat11</td>\n",
+       "      <td>0.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jagmeet Singh tells Justin Trudeau not to call...</td>\n",
+       "      <td>440</td>\n",
+       "      <td>p1nz6q</td>\n",
+       "      <td>https://www.thestar.com/politics/federal/2021/...</td>\n",
+       "      <td>416</td>\n",
+       "      <td>1.628598e+09</td>\n",
+       "      <td></td>\n",
+       "      <td>sleipnir45</td>\n",
+       "      <td>0.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>O'Toole warns Canadians not safe in China afte...</td>\n",
+       "      <td>111</td>\n",
+       "      <td>p1vdas</td>\n",
+       "      <td>https://ca.news.yahoo.com/otoole-warns-canadia...</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1.628621e+09</td>\n",
+       "      <td></td>\n",
+       "      <td>FancyNewMe</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  score      id  \\\n",
+       "0  COVID-19 Health & Support Megathread #9 - REMI...    288  nbxior   \n",
+       "1                           2021 Olympics Megathread    166  orbf0z   \n",
+       "2  Moderna to sign agreement to build MRNA produc...    716  p1o95n   \n",
+       "3  Jagmeet Singh tells Justin Trudeau not to call...    440  p1nz6q   \n",
+       "4  O'Toole warns Canadians not safe in China afte...    111  p1vdas   \n",
+       "\n",
+       "                                                 url  num_comments  \\\n",
+       "0  https://www.reddit.com/r/canada/comments/nbxio...           273   \n",
+       "1  https://www.reddit.com/r/canada/comments/orbf0...           303   \n",
+       "2  https://www.cbc.ca/news/politics/moderna-plant...           164   \n",
+       "3  https://www.thestar.com/politics/federal/2021/...           416   \n",
+       "4  https://ca.news.yahoo.com/otoole-warns-canadia...           108   \n",
+       "\n",
+       "        created                                               body  \\\n",
+       "0  1.620957e+09  Canada is now faced with its third wave impact...   \n",
+       "1  1.627219e+09  It's the 2021 Olympics finally! This thread is...   \n",
+       "2  1.628599e+09                                                      \n",
+       "3  1.628598e+09                                                      \n",
+       "4  1.628621e+09                                                      \n",
+       "\n",
+       "         author  upvote_ratio  \n",
+       "0         medym          0.91  \n",
+       "1      Evilbred          0.80  \n",
+       "2  morenewsat11          0.93  \n",
+       "3    sleipnir45          0.92  \n",
+       "4    FancyNewMe          0.91  "
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "canada_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canada_titles = list(canada_df['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"titles.json\", 'w') as jsonf:\n",
+    "    json.dump(canada_titles, jsonf)"
    ]
   },
   {
