--- a/yelp_corpus.ipynb
+++ b/yelp_corpus.ipynb
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "content = response.content\n",
-    "soup = BeautifulSoup(content,\"html.parser\")"
+    "soup = BeautifulSoup(content,\"lxml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "  'description': 'Why is the service here so poor? The food is okay - but every time I come here (alone or with someone else) the servers will seat me and then it&apos;s at least 10-15 minutes before anyone will ask if I need a beverage or am ready to order. Feels like an eon - and it&apos;s like this regardless of how busy they are. Ooof.'}]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
