updated for bugs

--- a/yelp_corpus.ipynb
+++ b/yelp_corpus.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -461,18 +461,18 @@
        "[('MILA Plant-Based', '/biz/mila-plant-based-vancouver?osq=Vegan+Restaurants'),\n",
        " ('Lotus Seed Vegan', '/biz/lotus-seed-vegan-vancouver?osq=Vegan+Restaurants'),\n",
        " ('MeeT in Gastown', '/biz/meet-in-gastown-vancouver?osq=Vegan+Restaurants'),\n",
-       " ('BeetBox', '/biz/beetbox-vancouver?osq=Vegan+Restaurants'),\n",
        " ('Vegan Cave Cafe', '/biz/vegan-cave-cafe-vancouver?osq=Vegan+Restaurants'),\n",
+       " ('BeetBox', '/biz/beetbox-vancouver?osq=Vegan+Restaurants'),\n",
        " ('Nuba in Gastown', '/biz/nuba-in-gastown-vancouver-2?osq=Vegan+Restaurants'),\n",
+       " ('Tama Organic Life',\n",
+       "  '/biz/tama-organic-life-vancouver?osq=Vegan+Restaurants'),\n",
        " ('Do Chay', '/biz/do-chay-vancouver-2?osq=Vegan+Restaurants'),\n",
        " ('CHAU Veggie Express',\n",
        "  '/biz/chau-veggie-express-vancouver-2?osq=Vegan+Restaurants'),\n",
-       " ('Buddha-Full', '/biz/buddha-full-north-vancouver?osq=Vegan+Restaurants'),\n",
-       " ('Tama Organic Life',\n",
-       "  '/biz/tama-organic-life-vancouver?osq=Vegan+Restaurants')]"
+       " ('Buddha-Full', '/biz/buddha-full-north-vancouver?osq=Vegan+Restaurants')]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,13 +495,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'resto' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-0694dd276e07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mresto_revs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlink\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresto_links\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0murl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'https://www.yelp.ca'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mresto\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mcontent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'resto' is not defined"
+     ]
+    }
+   ],
    "source": [
     "resto_revs = []\n",
     "for name, link in resto_links:\n",
-    "    url = 'https://www.yelp.ca' + resto\n",
+    "    url = 'https://www.yelp.ca' + na\n",
     "    response = requests.get(url, headers=headers)\n",
     "    content = response.content\n",
     "    soup = BeautifulSoup(content, \"lxml\")\n",
