--- a/yelp_scrapy.ipynb
+++ b/yelp_scrapy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Collecting Yelp Reviews using Scrapy"
+    "## Collecting Yelp Reviews using Scrapy (In Progress)"
    ]
   },
   {
@@ -89,15 +89,6 @@
     "        '''\n",
     "        \n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "html body yelp-react-root div div.margin-t3__09f24__riq4X.margin-b6__09f24__wgl48.border-color--default__09f24__NPAKY div.biz-details-page-container-outer__09f24__pZBzx.border-color--default__09f24__NPAKY div.biz-details-page-container-inner__09f24__L9S07.border-color--default__09f24__NPAKY div.margin-b6__09f24__wgl48.border-color--default__09f24__NPAKY div.stickySidebar--heightContext__09f24__O4ZFj.tableLayoutFixed__09f24__oM8X7.arrange__09f24__LDfbs.padding-b4__09f24__q6U6q.border--bottom__09f24___mg5X.border-color--default__09f24__NPAKY div.arrange-unit__09f24__rqHTg.arrange-unit-grid-column--8__09f24__HDezV.padding-r2__09f24__ByXi4.border-color--default__09f24__NPAKY div.border-color--default__09f24__NPAKY section.margin-t4__09f24__G0VVf.padding-t4__09f24__Y6aGL.border--top__09f24__exYYb.border-color--default__09f24__NPAKY div.css-79elbk.border-color--default__09f24__NPAKY div.border-color--default__09f24__NPAKY ul.undefined.list__09f24__ynIEd li.margin-b5__09f24__pTvws.border-color--default__09f24__NPAKY div.review__09f24__oHr9V.border-color--default__09f24__NPAKY div.margin-b2__09f24__CEMjT.border-color--default__09f24__NPAKY p.comment__09f24__gu0rG.css-1sufhje"
    ]
   },
   {
